<resources>
    <string name="app_name">BB statistics</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bbstat_start">BBStatistics</string>

    <string name="add_team">Add team</string>
    <string name="add_player">Add player</string>
    <string name="add_game">Add game</string>
    <string name="continue_game">Continue game</string>
    <string name="title_activity_startup">BB statistic</string>
    <string name="title_player_list">Players</string>
    <string name="title_player_detail">Player Detail</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="basketball_statistic">Basketball statistics</string>
    <string name="substitute">Substitute</string>
    <string name="opponent">Opponent</string>
    <string name="save_changes_title">You have made some changes.</string>
    <string name="save_changes_question">Would you like to save before exiting?</string>
    <string name="chronometer_initial_format">Initial format: %s</string>
    <string name="chronometer_start">star</string>
    <string name="chronometer_stop">stop</string>
    <string name="chronometer_reset">reset</string>
    <string name="addPlayer_number">Number</string>
    <string name="addPlayer_name">Name</string>
    <string name="addPlayer_add">Add</string>
    <string name="addPlayer_update">Update</string>
</resources>
